src/k8s/apps/hello-nginx/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hello-nginx-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
